# re-EMBER

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  README.zh-CN.md  bool_problem.h  bsp.cpp  bsp.h  clipping.h  geometry256.h  main.cpp  math256_tests.cpp  plane_geometry256.h
docs/: API.md  ARCHITECTURE.md  benchmark-models.md  core-logic-flow.md  geometry-kernel-contract.md  paper-experiment-tests.md
docs/diagrams/: boolean-pipeline-sequence.puml  build-trees-flow.puml  system-component-diagram.puml  system-layered-overview.puml  system-overview.puml  wnv_trace.mermaid
reference/: EMBER_MinerU_VLM_fixed.md  EMBER_MinerU_VLM_fixed_zh.md  Fast Exact Booleans for Iterated CSG using Octree-Embedded BSPs.md  Fast Exact Booleans for Iterated CSG using Octree-Embedded BSPs_中文.md
src/: main.cpp  reember_pch.h
src/algorithm/: WNV_tracing.cpp  WNV_tracing.h  bsp.cpp  bsp.h  clipping.cpp  clipping.h  leaf_arrangement.cpp  leaf_arrangement.h  path_candidate_details.h  path_candidates.cpp  path_candidates.h  shit_wrapper.h  tmp-adapter.h  tracing_geometry.cpp  tracing_geometry.h
src/application/: main.cpp  nef_postprocess.cpp  nef_postprocess.h  output_modes.h  verify.cpp  visual_test.cpp  visual_test_pch.h
src/core/: bool_problem.cpp  bool_problem.h  leaf_classifier.cpp  local_parallel.h  logging.cpp  logging.h  main.cpp  parallel_solve_context.h  perf_tracing.h  solver_shared.h  subdivision_solver.cpp  subdivision_solver.h
src/geometry/: aabb.h  clipping.cpp  clipping.h  geometry256.cpp  geometry256.h  plane_geometry256.h  polygon_ops.cpp  polygon_ops.h
src/io/: io.cpp  io.h  mesh_io.cpp  mesh_io.h
src/math/: fixed_int256.h  fixed_paper_kernel.h  math256.h  paper_kernel.h  plane_geometry256.h  winding_number.h  winding_number_f.h
src/tests/: bool_problem_tests.cpp  bool_problem_tests.h  io_tests.cpp  io_tests.h  logging_test_support.h  math256_tests.cpp  math256_tests.h  test_main.cpp
tests/inputs/thesis_benchmark/: README.md  manifest.csv
tests/paper_experiments/: README.md  manifest.csv
tools/: profile-kember.ps1  profile-re-ember.ps1
